tests/rosetta/out/Pascal/catalan-numbers-pascals-triangle.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/catalan-numbers-pascals-triangle.pas
catalan-numbers-pascals-triangle.pas(14,19) Warning: function result variable of a managed type does not seem to be initialized
catalan-numbers-pascals-triangle.pas(38,7) Error: Identifier not found "_"
catalan-numbers-pascals-triangle.pas(38,7) Error: Ordinal expression expected
catalan-numbers-pascals-triangle.pas(38,7) Error: Illegal counter variable
catalan-numbers-pascals-triangle.pas(58,53) Error: Incompatible types: got "Int64" expected "TArray$1$crc9F312717"
catalan-numbers-pascals-triangle.pas(61,55) Error: Incompatible type for arg no. 1: Got "TArray$1$crc9F312717", expected "QWord"
catalan-numbers-pascals-triangle.pas(64,49) Error: Incompatible type for arg no. 1: Got "TArray$1$crc9F312717", expected "QWord"
catalan-numbers-pascals-triangle.pas(14,19) Warning: function result variable of a managed type does not seem to be initialized
catalan-numbers-pascals-triangle.pas(68) Fatal: There were 6 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
